Add inspection instructions to popup

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,10 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <h1>Console</h1>
+    <h1>Extensions Console</h1>
+    <p>
+      To access the console, right click on the icon above and chose "Inspect
+      Popup". The console in the inspector will have access to almost every
+      internal chrome API.
   </body>
 </html>
