--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,29 +1,37 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Extensions Developer Console</title>
     <style>
-      body {
-        min-width: 357px;
-        overflow-x: hidden;
+      body{
+        min-width: 400px;
+        min-height: 500px;
       }
-
-      img {
-        margin: 5px;
-        border: 2px solid black;
-        vertical-align: middle;
-        width: 75px;
-        height: 75px;
+      #input{
+        width: 99%;
+      }
+      #output{
+        background: #ddd;
       }
     </style>
-
+    <script src="jquery.min.js"></script>
+    <script src="sugar.1.3.9.min.js"></script>
     <script src="popup.js"></script>
   </head>
   <body>
     <h1>Extensions Console</h1>
     <p>
-      To access the console, right click on the icon above and chose "Inspect
-      Popup". The console in the inspector will have access to almost every
-      internal chrome API.
+      To access traditional javascript console with internal APIs enabled, visit
+      <code>chrome://extensions</code> and enable Developer Mode in the top
+      right. Then, right click on this extension's icon and chose "Inspect
+      Popup".
+    </p>
+    <h2>Input</h2>
+    <form id="input-form">
+      <input type="text" id="input" />
+      <input type="submit" value="Run" />
+    </form>
+    <h2>Output</h2>
+    <pre id="output"></pre>
   </body>
 </html>
